Fix body overflow and change intro video.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,10 @@ html, body {
   font-family: 'Lato', sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .main {
   position: relative;
   top: 0;
